Fix Aligning Errors

--- a/resources/style.css
+++ b/resources/style.css
@@ -75,11 +75,25 @@ body{
   height: 100px;
   width: 1250px;
 }
+.missionheader h2 {
+  margin-bottom: 0;
+  font-size: 28px;
+}
+.missionheader h4{
+  margin-top: 20px;
+}
 
 /*Teas Section Styling*/
 .teas {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
+  align-content: center;
+}
+.teassection{
+  width: 100%;
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .headerteas{
@@ -93,6 +107,11 @@ body{
 .headerteas h2,
 .headerteas h4 {
   width:100%;
+}
+.headerteas h2{
+ position: relative;
+ top: 20px;
+ margin-bottom: 10px;
 }
 .fallberry,
 .spicedrum,
@@ -120,25 +139,21 @@ body{
   text-align: center;
 }
 .fallberry{
-  margin-left: 100px;
   margin-right: 25px;
 }
 .spicedrum{
   margin-left: 25px;
   margin-right: 25px;
-}
-.donut{
-  margin-right: 100px;
+  }
+.donuts{
   margin-left: 25px;
 }
 .myrtle{
-  margin-left: 275px;
   margin-right: 25px;
 }
 .bedford{
   margin-left: 25px;
 }
-
 
 /*locations styling*/
 .locations{
@@ -154,6 +169,9 @@ body{
 .locations h2{
   width: 100%;
   text-align: center;
+  position: relative;
+  bottom: 30px;
+  margin-bottom: 15px;
 }
 .downtown,
 .eastbayside,
@@ -165,6 +183,9 @@ body{
   display: flex;
   flex-direction: column;
   text-align: center;
+  position: relative;
+  bottom: 30px;
+  margin-top: 0;
 }
 .downtown {
   margin-left: 120px;
@@ -187,14 +208,25 @@ body{
 /*Styling the footer*/
 .footer{
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  width: 1200px;
   height: 200px;
-  width: 1000px;
+  flex-wrap: wrap;
   position: relative;
-  top: 100px;
+  top:100px;
+}
+.footerheader{
+  text-align:
+}
+.contact{
+  display: flex;
   text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 .copyright{
-  position: relative;
-  top:60px;
+  text-align: left;
+  width: 1000px;
+  margin-left: 0px;
+  margin-right: auto;
 }
